part3/3.02/manifests/logoutput.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
  namespace: applications
spec:
  type: NodePort
  selector:
    app: logoutput
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: shared-logoutput
          emptyDir: {}
      containers:
        - name: filewriter
          image: lnsth/logoutput1:exercise_3.02
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-logoutput
            mountPath: /files
        - name: output
          image: lnsth/logoutput2:exercise_3.02
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-logoutput
            mountPath: /files
