part3/3.02/manifests/pingpong.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: applications
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9999
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pingpong
  name: pingpong
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: lnsth/pingpong:exercise_3.02
          imagePullPolicy: Always
