part3/3.02/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashgenerator-svc
spec:
  type: NodePort
  selector:
    app: hashgenerator
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9999
