part3/3.02/manifests/logoutput-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
  namespace: applications
spec:
  rules:
    - http:
        paths:
          - path: "/status"
            pathType: Prefix
            backend:
              service:
                name: logoutput-svc
                port:
                  number: 80
