part3/3.02/manifests/pingpong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: applications
spec:
  rules:
    - http:
        paths:
          - path: "/pingpong" 
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 80
